--- a/lang/ay.json
+++ b/lang/ay.json
@@ -3,9 +3,12 @@
   "nav_calendario": "Pacha Chimpu",
   "nav_candidatos": "Ajllawinaka",
   "nav_partido_politico": "Partido Político",
+  "nav_donde_voto": "Kawkha Votiri?",
   "nav_noticias": "Yatiyawinaka",
   "nav_idioma": "Aru",
   "hero_title": "Ajllawinaka 2026",
   "hero_subtitle": "Juma Arumampi, Juma Ajllawimampi. Perú Suyu Ajllawinaka 2026",
-  "hero_description": "Taqi yatiyawinaka, jichha pachan, chiqa yatiyawinaka."
+  "hero_description": "Taqi yatiyawinaka, jichha pachan, chiqa yatiyawinaka.",
+  "donde_voto_title": "Kawkha Votiri?",
+  "donde_voto_subtitle": "Jikxatañani votañan uta ukat taqi kuns yatiñanakax munapxta."
 }
