--- a/lang/qu.json
+++ b/lang/qu.json
@@ -3,9 +3,12 @@
   "nav_calendario": "Pacha Unancha",
   "nav_candidatos": "Akllanakuqkuna",
   "nav_partido_politico": "Partido Político",
+  "nav_donde_voto": "Maypi Votasaq?",
   "nav_noticias": "Willakuykuna",
   "nav_idioma": "Simi",
   "hero_title": "Akllanakuykuna 2026",
   "hero_subtitle": "Qam Kunkanki, Qam Akllanki. Perú Llapanpaq Akllanakuykuna 2026",
-  "hero_description": "Tukuy willakuy, chay pachapi, mana llullasqa kananpaq."
+  "hero_description": "Tukuy willakuy, chay pachapi, mana llullasqa kananpaq.",
+  "donde_voto_title": "Maypi Votasaq?",
+  "donde_voto_subtitle": "Tariy votana wasiykita y tukuy necesitasqayki willakuyta."
 }
